Fix passing null / undefined as NodeFilter parameter for createNodeIterator() / createTreeWalker() https://bugs.webkit.org/show_bug.cgi?id=148257

Reviewed by Darin Adler.

Source/WebCore:

Fix passing null / undefined as NodeFilter parameter for createNodeIterator() / createTreeWalker().
It is supposed to be translated into a *null* NodeFilter. However, WebKit was constructing a
NodeFilter in this case.

Chrome and Firefox do not create a NodeFilter in this case.

No new tests, already covered by:
fast/dom/createNodeIterator-parameters.html
fast/dom/createTreeWalker-parameters.html

* bindings/js/JSNodeFilterCustom.cpp:
(WebCore::JSNodeFilter::toWrapped):

LayoutTests:

Rebaseline tests. We are now passing more of the checks.

* fast/dom/createNodeIterator-parameters-expected.txt:
* fast/dom/createTreeWalker-parameters-expected.txt:


Canonical link: https://commits.webkit.org/166396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188745 268f45cc-cd09-0410-ab3c-d52691b4dbfc