Source/WebCore/bindings/js/JSNodeFilterCustom.cpp
@@ -40,6 +40,9 @@ RefPtr<NodeFilter> JSNodeFilter::toWrapped(JSC::VM& vm, JSC::JSValue value)
     if (value.inherits(JSNodeFilter::info()))
         return &JSC::jsCast<JSNodeFilter*>(asObject(value))->impl();
 
+    if (!value.isObject())
+        return nullptr;
+
     RefPtr<NodeFilter> result = NodeFilter::create();
     result->setCondition(JSNodeFilterCondition::create(vm, result.get(), value));
     return result;
